[package]
name = "jili_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
nom = "7"
derivative = "2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "jili_benchmark"
harness = false